# ntfsdump

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommands.sh
.github/workflows/: build-binary-nuitka.yaml  build-binary.yaml  build-docker-image.yaml  publish-binary-pypi.yaml  publish-release.yaml  test.yaml
src/: ntfsdump.py
src/ntfsdump/: __about__.py  __init__.py  __main__.py  cli.py  core.py  image.py  logger.py  volume.py
src/ntfsdump/formats/: __init__.py  base.py  e01.py  raw.py  vhd.py  vmdk.py
src/ntfsdump/models/: ImageFile.py  Log.py  MetaData.py  NtfsFile.py  NtfsVolume.py
src/ntfsdump/presenters/: NtfsDumpPresenter.py
src/ntfsdump/views/: BaseView.py  NtfsDumpView.py
test/ntfsdump/: conftest.py
tests/ntfsdump/: conftest.py  test__init__.py
