[project]
name = "ntfsdump"
dynamic = ["version"]
description = "An efficient tool for extracting files, directories, and alternate data streams directly from NTFS image files."
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [
    { name = "sumeshi", email = "sum3sh1@protonmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "pytsk3",
    "libewf-python",
    "libvmdk-python",
    "libvhdi-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ntfsdump/__about__.py"

[project.urls]
Homepage = "https://github.com/sumeshi/ntfsdump"
Repository = "https://github.com/sumeshi/ntfsdump"

[dependency-groups]
dev = [
    "black",
    "mypy",
    "flake8",
    "pytest",
    "nuitka",
    "zstandard>=0.25.0",
]

[project.scripts]
ntfsdump = 'ntfsdump.cli:main'
