[project]
name = "ntfsdump"
dynamic = ["version"]
description = "A command-line tool for efficiently extracting files, directories, and alternate data streams directly from NTFS image files."
readme = "README.md"
license = "MIT"
authors = [
    { name = "sumeshi", email = "sum3sh1@protonmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "pytsk3==20260520",
    "libewf-python==20240506",
    "libvmdk-python==20240510",
    "libvhdi-python==20251119",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ntfsdump/__about__.py"

[project.urls]
Homepage = "https://github.com/sumeshi/ntfsdump"
Repository = "https://github.com/sumeshi/ntfsdump"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "nuitka>=4.1.2",
    "pytest>=9.0.3",
    "zstandard>=0.25.0",
]

[project.scripts]
ntfsdump = 'ntfsdump.cli:main'
